fixed login spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -204,6 +204,10 @@ div {
   /*height: 100%;*/
 }
 
+#spacing {
+	padding: 10px 50px 0 50px;
+}
+
 .container {
 	position: relative;
 	margin: 0 auto;
